--- a/app/src/main/res/drawable/background_right.xml
+++ b/app/src/main/res/drawable/background_right.xml
@@ -3,8 +3,7 @@
     android:shape="rectangle">
 
     <corners
-        android:radius="10dp"
-        android:topRightRadius="0dp"/>
+        android:radius="17dp"/>
 
     <solid android:color="@color/purple_200"/>
 
